# dony-resume-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.codex/dony_phase/: architecture_refactor_pre_phase2_20260428_2330.md  multi_agent_arch_20260429_1304.md  phase1_chat_assistant_20260428_2041.md  resume_db_fts_20260429_1209.md
.codex/dony_ralph/architecture-refactor-pre-phase2/: progress.md  tasks.json
.codex/dony_ralph/multi-agent-arch/: progress.md  tasks.json
.codex/dony_ralph/phase1-chat/: progress.md  tasks.json
.codex/dony_ralph/resume-db-fts/: progress.md  tasks.json
docs/: architecture-flow.md  streaming-plan.md
feishu/: __init__.py  bot.py  dedup.py  file_utils.py  messages.py  models.py  streaming_card.py
prompts/: __init__.py  comment_llm.md  compact_prompt.md  review_llm.md  system_prompt.md
scripts/: batch_import.py  check_session.py  import_remaining.py  migrate_phone.py
services/: __init__.py  agent_config.py  agent_loop.py  commands.py  comment_llm.py  db.py  keyword_extractor.py  llm.py  llm_utils.py  pdf_classifier.py  pdf_processor.py  registry.py  reranker.py  resume_indexer.py  resume_searcher.py  review_llm.py  session.py  time_utils.py  tool_base.py  vector_indexer.py
services/handlers/: __init__.py  base.py  resume_handler.py  text_handler.py  unsupported_handler.py
services/tools/: __init__.py  normal_chat.py  query_resume_db.py  search_resumes.py  send_resume_pdf.py
(+2 files in other folders)
