[project]
name = "dony-resume-bot"
version = "0.1.0"
description = "飞书智能简历管理系统 - 支持 PDF 自动解析入库、语义搜索、AI 多维度评分"
requires-python = ">=3.11"
dependencies = [
    "lark-oapi>=1.5.0",
    "openai>=1.0.0",
    "tiktoken>=0.7.0",
    "python-dotenv>=1.0.0",
    "jieba>=0.42.1",
    "pymupdf>=1.25.0",
    "chromadb>=0.5.0",
]

[tool.uv]
dev-dependencies = []
